tests/scratch.scss
@import '../index';

/////////////////////////////////////////////
//////////////// catch active ///////////////
/////////////////////////////////////////////

$throw-catch: true;

.test {
  error: throw-error('this is an error message from a function');
  warn: throw-warn('this is a warn message from a function');
  debug: throw-debug('this is a debug message from a function');
}

@include throw-error('this is an error message from a mixin');
@include throw-warn('this is a warn message from a mixin');
@include throw-debug('this is a debug message from a mixin');

/////////////////////////////////////////////
///////// catch inactive (no errors) ////////
/////////////////////////////////////////////

$throw-catch: false;

.test {
  // error: throw-error('this is an error message from a function');
  warn: throw-warn('this is a warn message from a function');
  debug: throw-debug('this is a debug message from a function');
}

// @include throw-error('this is an error message from a mixin');
@include throw-warn('this is a warn message from a mixin');
@include throw-debug('this is a debug message from a mixin');
